SERVER-43079 ignore internal connections in failCommand failpoint